Removed deprecated URL constructor