@@ -8,8 +8,7 @@ import com.google.api.services.youtube.model.SearchResult;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -73,7 +72,7 @@ public class YouTubeUtil {
         double aspectRatio = 16.0 / 9.0;
         try {
             // Load the thumbnail image from the URL
-            BufferedImage image = ImageIO.read(new URL("https://img.youtube.com/vi/" + getYouTubeID(youTubeURL) + "/hqdefault.jpg"));
+            BufferedImage image = ImageIO.read(URI.create("https://img.youtube.com/vi/" + getYouTubeID(youTubeURL) + "/hqdefault.jpg").toURL());
             // Crop the image to the desired aspect ratio
             int width = image.getWidth();
             int height = image.getHeight();
@@ -90,19 +89,6 @@ public class YouTubeUtil {
         } catch (Exception e) {
             e.printStackTrace();
             return null;
-        }
-    }
-
-    /**
-     * @param url the URL
-     * @return true if the given URL is a valid URL
-     */
-    public static boolean isValidURL(String url) {
-        try {
-            new URL(url);
-            return true;
-        } catch (MalformedURLException e) {
-            return false;
         }
     }
 }
